@@ -1,4 +1,8 @@
-﻿shmuel 19.02.2015 16:30:33 +0200 - build 4271
+﻿zg 20.02.2015 01:01:34 +0200 - build 4272
+
+1. уточнение 4262: если что-то в VE_READ приводило к перерисовке quickview - фар падал.
+
+shmuel 19.02.2015 16:30:33 +0200 - build 4271
 
 1. M#2950: InputRecordToName возвращает символ с кодом 1: ☺
 
